kustomize/components/ingress/builder.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quay-builder
  annotations: {}
