kustomize/components/ingress/config.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quay-config-editor
  annotations: {}
